# slack-to-jira

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  alerts.tf  api_gateway.tf  dynamodb.tf  layer.tf  layer_script.sh  main.tf  manifest_template.yml  pyproject.toml  secrets.tf  slack_event_process_lambda.tf  slack_event_verify_lambda.tf  sqs.tf  variables.tf
layer/modules/: dynamodb_wrapper.py  jira_wrapper.py  secrets_manager_wrapper.py  slack_sdk_wrapper.py  sqs_wrapper.py
layer/modules/event/: __init__.py  app_mention_deregister_event.py  app_mention_event.py  app_mention_register_event.py  config.py  event.py  event_factory.py  exceptions.py  reaction_event.py  reaction_sync_event.py
slack_event_process/slack_event_process/: slack_event_process_handler.py  slack_event_processor.py
slack_event_process/tests/: test_slack_event_processor.py
slack_event_verify/slack_event_verify/: slack_event_verifier.py  slack_event_verify_handler.py
slack_event_verify/tests/: conftest.py  test_slack_event_verifier.py
